# TokGen

./: CMakeLists.txt  compile.sh
src/: Lexer.cpp  Lexer.hpp  main.cpp
